# Talos-ai

./: .replit  Book.txt  Journal.txt  Talos.json  buildozer.spec  index.html  main.py  models.py  pyproject.toml  replit.md  replit_auth.py
.github/workflows/: build.yml
templates/: index.html  landing.html
