[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "flask>=3.1.3",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "oauthlib>=3.3.1",
    "openai>=2.31.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "werkzeug>=3.1.8",
]
